--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ annotated-types==0.7.0
 asttokens==2.4.1
 attrs==24.2.0
 av==13.1.0
+boto3==1.35.57
+botocore==1.35.57
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
@@ -25,6 +27,7 @@ imageio==2.36.0
 ipykernel==6.29.5
 ipython==8.29.0
 jedi==0.19.1
+jmespath==1.0.1
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -64,6 +67,7 @@ rasterio==1.4.2
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.21.0
+s3transfer==0.10.3
 scikit-image==0.24.0
 scikit-learn==1.5.2
 scipy==1.14.1
