--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ pystac-client==0.8.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
-pywin32==308
+# pywin32==308
 pyzmq==26.2.0
 rasterio==1.4.2
 referencing==0.35.1
