--- a/compose.yml
+++ b/compose.yml
@@ -3,10 +3,10 @@ services:
     build:
       context: .
     ports:
-      - 8888
+      - 8888:8888
     volumes:
       - jupyter-data:/home/work
-    command: jupyter lab --port=8888 --allow-root
+    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root
 
 volumes:
   jupyter-data:
