--- a/compose.yml
+++ b/compose.yml
@@ -5,9 +5,5 @@ services:
     ports:
       - 8888:8888
     volumes:
-      - jupyter-data:/home/work
-    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root
-
-volumes:
-  jupyter-data:
-    name: jupyter-data
+      - app/data
+    command: jupyter lab --ip=0.0.0.0 --port=8888:8888 --no-browser --allow-root
