--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 services:
   jupyter:
-    build:
-      context: .
+    build: notebook
     ports:
       - 8888:8888
     volumes:
       - app/data
-    command: jupyter lab --ip=0.0.0.0 --port=8888:8888 --no-browser --allow-root
+    command: .venv/bin/jupyter lab --ip=0.0.0.0 --port=8888:8888 --no-browser --allow-root
+  satellite_embedding_google:
+    build: jobs
+    command: [".venv/bin/python", "-m", ".", satellite_embedding_google]
