--- a/jobs/Dockerfile
+++ b/jobs/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 COPY requirements.txt requirements.txt
 
-RUN python3 -m venv .venv \
+RUN python3 -m venv .venv && \
   .venv/bin/pip install -r requirements.txt
 
 COPY . .
