--- a/notebook/Dockerfile
+++ b/notebook/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-RUN python3 -m venv .venv \
+RUN python3 -m venv .venv && \
   .venv/bin/pip install -r requirements.txt
 
 EXPOSE 8888
